# kaalm

./: .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  PROJECT  README.md  RELEASING.md  ROADMAP.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
api/v1alpha1/: agent_types.go  agentchannel_types.go  agentclass_types.go  agenttask_types.go  constants.go  deepcopy_test.go  groupversion_info.go  modelprovider_types.go  shared_types.go  zz_generated.deepcopy.go
charts/agentry/: Chart.yaml  values.yaml
charts/kaalm/: Chart.yaml  values.yaml
cmd/gateway/: main.go  main_test.go
cmd/manager/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: agent_admin_role.yaml  agent_editor_role.yaml  agent_viewer_role.yaml  role.yaml  (+17 more)
docs/: API.md  API_ENDPOINTS.md  API_RESOURCES.md  ARCHITECTURE.md  AUTHORING.md  CLAUDE.md  CONTROLLER.md  CONTROLLER_LIFECYCLE.md  CONTROLLER_RECONCILERS.md  DEPLOYMENT.md  GATEWAY_LLM.md  GATEWAY_USER.md  OBSERVABILITY.md  PROVIDER.md  RUNTIME_CONTRACT.md  SECURITY.md  STARTER_TEMPLATES.md  STORIES.md  VISION.md  book.toml
examples/starter-python/: Dockerfile  README.md  pyproject.toml
examples/starter-python/agent/: __main__.py  handler.py  tls.py
guide/: CLAUDE.md  book.toml
hack/: boilerplate.go.txt  k3d-import.sh  k3d-up.sh
learn/: CLAUDE.md  book.toml
specs/: 2026-07-20-k3d-e2e-suite-design.md  2026-07-20-k3d-e2e-suite-plan.md
(+328 files in other folders)
