# Copyright 2026 The Kaalm Authors. Licensed under the Apache License, Version 2.0.
[project]
name = "kaalm-starter-python"
version = "0.1.0"
description = "Kaalm runtime-contract starter template (aiohttp)"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "watchdog>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]
